SERVER-15015 fix $min/$max handling for descending indices